--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
             </p>
             <div class="incentive-box-bg border-2 rounded-lg p-8 shadow-lg max-w-2xl mx-auto text-left">
                 
-                <p class="text-lg text-gray-700 mb-6">
-                    お悩み事を「聞くだけ」のヒアリングではありません。
-                    私があなたの事業所に伺い、その場で**「目に見える改善」**を実行します。
-                </p>
                 <h4 class="text-lg font-bold text-gray-900 mb-3">【ご相談対象】</h4>
                 <p class="text-gray-700 mb-6">
-                    **従業員様、施設のご利用者様ももちろんOKです！**
+                    従業員様、施設のご利用者様
                 </p>
 
                 <h4 class="text-lg font-bold text-gray-900 mb-3">【ご相談内容の例】</h4>
                 <ul class="list-disc list-inside text-gray-700 space-y-2">
-                    <li class="font-bold">（従業員様・ご利用者様向け）スマホ・タブレットの基本操作、LINE等の使い方</li>
-                    <li class="font-bold">（業務向け）介護ソフトの活用法、PCトラブル、Excelの効率化</li>
+                    <li class="font-bold">スマホの操作方法</li>
+                    <li class="font-bold">パソコン・タブレットの操作方法</li>
+                    <li class="font-bold">スマホの写真の撮り方</li>
+                    <li class="font-bold">LINEのはじめ方</li>
+                    <li class="font-bold">Zoomの使い方</li>
+                    <li class="font-bold">Excelや介護記録アプリの使い方</li>
                 </ul>
             </div>
         </div>
