--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     
     <!-- 外部CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M6TFQMPKE6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M6TFQMPKE6');
+</script>
 
 </head>
 <body class="bg-gray-50">
