--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <svg class="w-12 h-12 accent-color mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
                     <h3 class="text-xl font-bold text-gray-900 mb-2">その他（PC・業務）</h3>
                     <p class="text-gray-600">
-                        もちろん「PCが遅い」「Excelが非効率」といった業務のお悩みも、まとめて対応可能です。
+                        「PCが遅い」「Excelが非効率」といった業務のお悩みも、まとめて対応可能です。
                     </p>
                 </div>
             </div>
